--- a/app/src/main/res/layout/fragment_reviews.xml
+++ b/app/src/main/res/layout/fragment_reviews.xml
@@ -6,74 +6,47 @@
     android:layout_height="match_parent"
     tools:context=".fragment.reviewsfragment.ReviewsFragment">
 
-<androidx.core.widget.NestedScrollView
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content">
-    <LinearLayout
+    <androidx.core.widget.NestedScrollView
         android:layout_width="match_parent"
-        android:orientation="vertical"
-        android:layout_height="match_parent">
+        android:layout_height="wrap_content">
 
-        <View
-            android:id="@+id/view"
-            android:layout_width="0dp"
-            android:layout_height="@dimen/sb_size_8"
-            android:background="@color/grey_200"
-            android:elevation="@dimen/sb_size_0"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
-
-        <ImageView
-            android:id="@+id/imageView"
-            android:layout_width="match_parent"
-            android:layout_height="@dimen/sb_size_140"
-            android:layout_marginStart="28dp"
-            android:layout_marginTop="@dimen/sb_size_16"
-            android:layout_marginEnd="28dp"
-            android:background="@color/grey_200"
-            android:contentDescription="@string/review_image"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/view" />
-
-
-
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/reviews_recycler_view"
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_marginTop="16dp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            tools:listitem="@layout/item_review" />
+            android:orientation="vertical">
 
-        <TextView
-            android:id="@+id/txt_empty_list"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="No reviews for this product yet"
-            android:textColor="@color/grey_700"
-            android:textSize="@dimen/sb_text_size_18"
-            android:visibility="gone"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="@+id/reviews_recycler_view"
-            app:layout_constraintStart_toStartOf="@+id/reviews_recycler_view"
-            app:layout_constraintTop_toTopOf="@+id/reviews_recycler_view" />
+            <View
+                android:id="@+id/view"
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/sb_size_8"
+                android:background="@color/grey_200"
+                android:elevation="@dimen/sb_size_0"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
 
-        <ProgressBar
-            android:id="@+id/progressBar"
-            style="?android:attr/progressBarStyle"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="@+id/reviews_recycler_view"
-            app:layout_constraintStart_toStartOf="@+id/reviews_recycler_view"
-            app:layout_constraintTop_toTopOf="@+id/reviews_recycler_view" />
+            <ImageView
+                android:id="@+id/imageView"
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/sb_size_140"
+                android:layout_marginStart="@dimen/sb_size_24"
+                android:layout_marginTop="@dimen/sb_size_16"
+                android:layout_marginEnd="@dimen/sb_size_24"
+                android:background="@color/grey_200"
+                android:contentDescription="@string/review_image" />
 
-    </LinearLayout>
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/reviews_recycler_view"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_marginStart="@dimen/sb_size_24"
+                android:layout_marginTop="@dimen/sb_size_12"
+                android:layout_marginEnd="@dimen/sb_text_size_24"
+                tools:listitem="@layout/item_review" />
 
+        </LinearLayout>
 
-</androidx.core.widget.NestedScrollView>
+    </androidx.core.widget.NestedScrollView>
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/fab_add_review"
@@ -89,5 +62,22 @@
         app:fabSize="mini"
         app:maxImageSize="@dimen/sb_size_20"
         app:tint="@color/white" />
+
+    <TextView
+        android:id="@+id/txt_empty_list"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:text="@string/no_reviews_for_this_product_yet"
+        android:textColor="@color/grey_700"
+        android:textSize="@dimen/sb_text_size_18"
+        android:visibility="gone" />
+
+    <ProgressBar
+        android:id="@+id/progressBar"
+        style="?android:attr/progressBarStyle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center" />
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
