--- a/app/src/main/res/layout/item_wishlist.xml
+++ b/app/src/main/res/layout/item_wishlist.xml
@@ -23,7 +23,9 @@
             android:id="@+id/img_wish_list"
             android:layout_width="120dp"
             android:layout_height="165dp"
-            android:src="@color/grey_300" />
+            android:scaleType="centerCrop"
+            android:src="@color/grey_300"
+            tools:srcCompat="@tools:sample/avatars" />
 
     </androidx.cardview.widget.CardView>
 
