--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -91,4 +91,11 @@
         <item name="fontFamily">@font/gothambold</item>
     </style>
 
+    <style name="ToolbarStyle" parent="Theme.Ecommerce">
+        <item name="fontFamily">@font/gothammedium</item>
+        <item name="android:fontFamily">@font/gothammedium</item>
+        <item name="android:textColor">@color/black</item>
+        <item name="android:textSize">@dimen/sb_text_size_12</item>
+    </style>
+
 </resources>
