--- a/app/src/main/res/layout/item_new_product.xml
+++ b/app/src/main/res/layout/item_new_product.xml
@@ -13,13 +13,13 @@
         android:layout_marginEnd="@dimen/sb_size_4"
         app:cardCornerRadius="@dimen/sb_size_8"
         app:cardElevation="@dimen/sb_size_0"
-        app:layout_constraintBottom_toTopOf="@id/txt_child_price"
+        app:layout_constraintBottom_toTopOf="@id/txt_product_price"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
         <ImageView
-            android:id="@+id/img_child"
+            android:id="@+id/image_product"
             android:layout_width="110dp"
             android:layout_height="160dp"
             android:contentDescription="@string/sub_product"
@@ -28,7 +28,7 @@
     </androidx.cardview.widget.CardView>
 
     <TextView
-        android:id="@+id/txt_child_price"
+        android:id="@+id/txt_product_price"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
