wish list activity delete item

--- a/app/src/main/res/layout/fragment_recently_viewed.xml
+++ b/app/src/main/res/layout/fragment_recently_viewed.xml
@@ -9,12 +9,40 @@
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recently_viewed_recycler_view"
         android:layout_width="0dp"
-        android:layout_height="0dp"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_height="wrap_content"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
+    <TextView
+        android:id="@+id/view_more"
+        style="@style/BoldText"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
+        android:text="@string/view_more"
+        android:textColor="@color/black"
+        android:textSize="@dimen/sb_text_size_16"
+        android:visibility="visible"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <TextView
+        android:id="@+id/txt_empty"
+        style="@style/BoldText"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
+        android:layout_marginBottom="@dimen/sb_size_20"
+        android:text="@string/view_more"
+        android:textColor="@color/black"
+        android:textSize="@dimen/sb_text_size_16"
+        android:visibility="invisible"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_goneMarginTop="@dimen/sb_text_size_24" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
