--- a/app/src/main/res/layout/item_container_new.xml
+++ b/app/src/main/res/layout/item_container_new.xml
@@ -63,6 +63,7 @@
             android:textAlignment="center"
             android:textColor="@color/grey_700"
             android:textSize="@dimen/sb_text_size_12"
+            android:visibility="invisible"
             app:layout_constraintBottom_toBottomOf="parent"
 
             app:layout_constraintEnd_toEndOf="parent"
