--- a/app/src/main/res/layout/activity_single_product.xml
+++ b/app/src/main/res/layout/activity_single_product.xml
@@ -53,7 +53,6 @@
                     android:layout_below="@+id/viewpager"
                     android:layout_marginStart="@dimen/sb_size_20"
                     android:layout_marginTop="@dimen/sb_size_20"
-                    android:text="Graphic Sweatshirt"
                     android:textColor="@color/black"
                     android:textSize="@dimen/sb_text_size_17" />
 
@@ -65,7 +64,6 @@
                     android:layout_marginStart="@dimen/sb_size_20"
                     android:layout_marginTop="@dimen/sb_size_13"
                     android:fontFamily="@font/gothambold"
-                    android:text="1000"
                     android:textColor="@color/black"
                     android:textSize="@dimen/sb_text_size_17"
                     android:textStyle="bold" />
@@ -111,10 +109,10 @@
 
                 <androidx.recyclerview.widget.RecyclerView
                     android:id="@+id/colorRecyclerView"
-                    android:layout_width="wrap_content"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_below="@+id/color"
-                    android:layout_marginStart="@dimen/sb_size_20"
+                    android:layout_marginHorizontal="@dimen/sb_size_20"
                     android:layout_marginTop="@dimen/sb_size_10" />
 
                 <TextView
@@ -130,10 +128,10 @@
 
                 <androidx.recyclerview.widget.RecyclerView
                     android:id="@+id/sizeRecyclerView"
-                    android:layout_width="wrap_content"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_below="@+id/sizeTextView"
-                    android:layout_marginStart="@dimen/sb_size_20"
+                    android:layout_marginHorizontal="@dimen/sb_size_20"
                     android:layout_marginTop="@dimen/sb_size_10"
                     android:layout_marginBottom="@dimen/sb_size_15" />
 
@@ -182,6 +180,7 @@
                         android:layout_marginVertical="@dimen/sb_size_10"
                         android:drawablePadding="@dimen/sb_size_10"
                         android:text="Free standard shipping"
+                        android:padding="@dimen/sb_size_10"
                         android:textColor="@color/black"
                         app:drawableStartCompat="@drawable/ic_shipping_size" />
 
@@ -191,6 +190,7 @@
                         android:layout_marginBottom="@dimen/sb_size_20"
                         android:drawablePadding="@dimen/sb_size_10"
                         android:gravity="start|center"
+                        android:padding="@dimen/sb_size_10"
                         android:text="Return Policy"
                         android:textColor="@color/black"
                         app:drawableStartCompat="@drawable/ic_return_size" />
