--- a/app/src/main/res/layout/fragment_recently_viewed.xml
+++ b/app/src/main/res/layout/fragment_recently_viewed.xml
@@ -10,9 +10,12 @@
         android:id="@+id/recently_viewed_recycler_view"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:spanCount="2"
+        tools:listitem="@layout/item_recently_viewed" />
 
     <TextView
         android:id="@+id/view_more"
@@ -20,6 +23,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
+        android:padding="@dimen/sb_size_12"
         android:text="@string/view_more"
         android:textColor="@color/black"
         android:textSize="@dimen/sb_text_size_16"
@@ -35,7 +39,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
         android:layout_marginBottom="@dimen/sb_size_20"
-        android:text="@string/view_more"
+        android:text="@string/no_items_here"
         android:textColor="@color/black"
         android:textSize="@dimen/sb_text_size_16"
         android:visibility="invisible"
