--- a/app/src/main/res/layout/fragment_wish_list.xml
+++ b/app/src/main/res/layout/fragment_wish_list.xml
@@ -24,6 +24,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
+        android:padding="@dimen/sb_size_12"
         android:text="@string/view_more"
         android:textColor="@color/black"
         android:textSize="@dimen/sb_text_size_16"
@@ -39,7 +40,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
         android:layout_marginBottom="@dimen/sb_size_20"
-        android:text="@string/view_more"
+        android:text="@string/no_items_here"
         android:textColor="@color/black"
         android:textSize="@dimen/sb_text_size_16"
         android:visibility="invisible"
