--- a/app/src/main/res/layout/item_wishlist.xml
+++ b/app/src/main/res/layout/item_wishlist.xml
@@ -20,9 +20,10 @@
         tools:viewBindingIgnore="false">
 
         <ImageView
-            android:id="@+id/img_wish_list"
+            android:id="@+id/img_recently_viewed"
             android:layout_width="120dp"
             android:layout_height="165dp"
+            android:contentDescription="@string/wish_list_image"
             android:scaleType="centerCrop"
             android:src="@color/grey_300"
             tools:srcCompat="@tools:sample/avatars" />
@@ -30,19 +31,19 @@
     </androidx.cardview.widget.CardView>
 
     <TextView
-        android:id="@+id/txt_wish_list_name"
+        android:id="@+id/txt_recent_name"
         style="@style/MediumText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="@dimen/sb_size_8"
         android:fontFamily="@font/gotham_font"
-        android:text="1234 $"
         android:textColor="@color/grey_900"
         android:textSize="@dimen/sb_text_size_15"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="@+id/cvDummy"
         app:layout_constraintStart_toStartOf="@id/cvDummy"
-        app:layout_constraintTop_toBottomOf="@id/cvDummy" />
+        app:layout_constraintTop_toBottomOf="@id/cvDummy"
+        tools:text="1234 $" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
